@@ -19,3 +19,4 @@ include
 lib
 web
 .tox
+*.sublime*
