@@ -4,6 +4,7 @@
 - Move towards replacing the XMLRPC API with JSON to make our requests
   cacheable. Also reduces the amount of requests needed dramatically.
 
+- Remove apache stats script as this information is no longer being used anyway.
 
 1.3 (2014-02-16)
 ----------------
